# Cortex

./: .codex-mcp.json  .gitignore  .mcp.json  AGENT_SPEC_cortex_v1.md  AGENT_SPEC_public_repo_security.md  AGENT_TEMP_cortex_v1_TODO.md  CHANGELOG.md  CONTRIBUTING.md  FOLLOWUP_TS_QUALIFIER.md  HANDOFF.md  IMPROVEMENT_PLAN.md  LICENSE  README.md  RTK_PLAN.md  SECURITY.md  install.sh  plan.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  codeql.yml  runtime-release.yml
.pi/plans/: 2026-07-17-qt-connect-resolution-precedence.md
agents/: cortex-explorer.md
docs/: qml-support.md  runtime-security.md
docs/superpowers/plans/: 2026-04-23-cortex-v2.md  2026-07-06-cortex-v3.md  2026-07-07-central-data-store.md
docs/superpowers/specs/: 2026-04-23-cortex-v2-design.md
evals/: RESULTS.md  TOKENIZER_CALIBRATION.md  __init__.py  calibrate_tokenizer.py  perf_ingest.py  perf_parsers.py  run_evals.py
hooks/: README.md  hooks.json  pre-tool-use.py  session-start.py
runtime/: runtime-lock.json
scripts/: build_runtime_bundle.py
skills/cortex/: SKILL.md
skills/cortex-change-review/: SKILL.md
skills/cortex-exploration/: SKILL.md
skills/cortex-pre-modification/: SKILL.md
src/cortex/: __init__.py  ast_extract.py  benchmark.py  bundle.py  cli.py  cochange.py  community.py  config.py  deadcode.py  enrich.py  export.py  fusion.py  gitutils.py  graph.py  hotspots.py  impact.py  ingest.py  integrations.py  models.py  pathfind.py  rank.py  references.py  report.py  risk.py  runtime.py  savings.py  semantic.py  skill-claude.md  skill-codex.md  store.py  tokenizer.py  viewer.py
src/cortex/mcp/: __init__.py  server.py  tools.py
src/cortex/structural/: __init__.py  qml_backend.py  qml_modules.py  qml_resolver.py  regex_backend.py  treesitter_backend.py
tests/: conftest.py  test_ast_extract.py  test_build_wiring.py  test_bundle_fusion.py  test_bundle_spans.py  test_bundle_v2.py  test_central_store.py  test_cochange.py  test_community.py  test_config.py  test_context_mcp.py  test_deadcode.py  test_enrich.py  test_evals.py  test_export.py  test_fusion.py  test_hooks.py  test_hotspots.py  test_impact_cochange.py  test_ingest_bundle_report.py  test_ingest_exclusions.py  test_ingest_incremental.py  test_integrations.py  test_mcp_auto_refresh.py  test_mcp_initialize_instructions.py  test_meta_envelope.py  test_models_v2.py  test_overview_budget.py  test_p0_hygiene.py  test_p2_mcp.py  test_pathfind.py  test_plugin_manifests.py  test_pre_tool_use_hook.py  test_qml_full_support.py  test_qml_modules.py  test_qml_resolution.py  test_qt_connects.py  test_qt_emits.py  test_qt_relations.py  test_qt_search_parity.py  (+21 more)
tests/fixtures/multilang_repo/: App.java  Main.qml  app.js  client.ts  engine.cpp  engine.hpp  lib.rs  main.c  worker.rb
tests/fixtures/qml_full_repo/: CMakeLists.txt  Card.qml  Main.qml  Malformed.qml  Theme.qml  Widget.hpp  helpers.js  module.qmltypes  qmldir  registrations.cpp  resources.qrc
tests/fixtures/qml_full_repo/one/: Card.qml
tests/fixtures/qml_full_repo/two/: Card.qml
tests/fixtures/sample_repo/: README.md  docs.md
