[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-context-engine"
version = "0.2.2"
description = "Local-first git-native context engine with graph, provenance, and token-budgeted retrieval bundles."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "alilfrances" }
]
dependencies = []

[project.optional-dependencies]
llm   = ["anthropic>=0.40", "openai>=1.0"]
watch = ["watchdog>=4"]
# PyPI pins verified 2026-07-06: tree-sitter 0.26.0; javascript 0.25.0;
# typescript 0.23.2; go 0.25.0; rust 0.24.2; java 0.23.5; ruby 0.23.1;
# swift 0.7.3 (maintained package exists, released 2026-06-01).
languages = [
  "tree-sitter==0.26.0",
  "tree-sitter-javascript==0.25.0",
  "tree-sitter-typescript==0.23.2",
  "tree-sitter-go==0.25.0",
  "tree-sitter-rust==0.24.2",
  "tree-sitter-java==0.23.5",
  "tree-sitter-ruby==0.23.1",
  "tree-sitter-swift==0.7.3",
]

[project.scripts]
cortex = "cortex.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cortex = ["skill-codex.md", "skill-claude.md"]
