[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-context-engine"
version = "0.8.0"
description = "Local-first git-native context engine with graph, provenance, and token-budgeted retrieval bundles."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "alilfrances" }
]
# Parser wheels are required for normal wheel/editable installs. Plugin
# launches use the isolated runtime manager instead of writing to site-packages.
dependencies = [
  "tree-sitter==0.26.0",
  "tree-sitter-language-pack==1.12.5",
]

[project.optional-dependencies]
llm    = ["anthropic>=0.40", "openai>=1.0"]
watch  = ["watchdog>=4"]
# Optional exact BPE token counts; tokenization falls back to the calibrated
# regex-segment heuristic when tiktoken is unavailable.
tokens = ["tiktoken>=0.7"]
# Compatibility extras retained so older install commands remain valid. The
# pinned required dependencies above are the sole parser source of truth.
languages = []
qml = []
# Optional offline static semantic retrieval. Model2Vec itself depends on numpy;
# keeping both names here makes the opt-in dependency boundary explicit.
semantic = ["model2vec>=0.8,<0.9", "numpy>=1.26"]

[project.scripts]
cortex = "cortex.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cortex = ["skill-codex.md", "skill-claude.md", "runtime-lock.json"]
